test/corpus/basic.txt
==================
Simple HTML content
==================

<html>Hello World</html>

---

(source_file
  (static))

==================
Simple Erlang block
==================

{user_name}

---

(source_file
  (static)
  (dynamic
)
  (static))

==================
HTML with embedded Erlang
==================

<h1>Welcome {user_name}!</h1>

---

(source_file
  (static)
  (dynamic
)
  (static))

==================
Complex HTML with multiple Erlang blocks
==================

<html>
  <head>
    <title>{title}</title>
  </head>
  <body>
    <h1>Welcome {user_name}!</h1>
    <p>Your score is {score * 100}.</p>
  </body>
</html>

---

(source_file
  (static)
  (dynamic
)
  (static)
  (dynamic
)
  (static)
  (dynamic
)
  (static))

==================
Empty Erlang block
==================

<p>Empty: {}</p>

---

(source_file
  (static)
  (dynamic)
  (static))

==================
Nested HTML tags with Erlang
==================

<div class="container">
  <ul>
    <li>{item}</li>
  </ul>
</div>

---

(source_file
  (static)
  (dynamic
)
  (static))
